@@ -31,29 +31,21 @@ MD5 ef24fb627241356bac4842d52ae10a55 files/sshd.rc6 1895
 RMD160 ab773dbbe1b539a3639e321ec5c4d18c6a697912 files/sshd.rc6 1895
 SHA256 068251ba84e72d06fa96e935ed575ad75b2dc607d73ca48e440884c625883f67 files/sshd.rc6 1895
 DIST openssh-4.4p1+x509-5.5.1.diff.gz 137417 RMD160 34cf39583e8c01bb055671a540c7463f45134960 SHA1 091e7499726fce527afeb66fffaf6ee48f4ac4bb SHA256 bb2936a0c5ffff2f5db41a7da83390a189dc4590f9a95325c252d81b9b693ded
+DIST openssh-4.4p1-hpn12v11-gentoo.patch.bz2 14675 RMD160 340aaed711bb58a39fe36ebbd47ba1f1e7e304c1 SHA1 f8fe308e338c186563cfce7aa7689a4c810ae6d5 SHA256 dfa55376bbd11f6688cc0f228f8dff1175ab985bf80267630bbe38f0c9be261d
 DIST openssh-4.4p1.tar.gz 1044334 RMD160 13eb79a54e95037fff1902b659319df1c5f79bbc SHA1 6a52b1dee1c2c9862923c0008d201d98a7fd9d6c SHA256 0252474af4009129cde6a2df2893fb1ac24316436758796f6adc043ac73b35ac
 DIST openssh-lpk-4.4p1-0.3.7.patch 61187 RMD160 90b0bbe07a3617f6eecb9f77c1a38c5f4dd4dcaf SHA1 b1854a4391c5d11f1a5ab09059643bbaf2278009 SHA256 c74aa642b4b2eeceb0c3f554752d172f8d5a7cd30f2aae517e93ef3bf1bd24e7
-EBUILD openssh-4.4_p1-r1.ebuild 5380 RMD160 01dd694cc8e688c7b4158291284d5a64d17b0da1 SHA1 ff3282c748e844f86e868aed6d88f4012c914f8d SHA256 fe4209469378200c976aa6fabbdfd570bd539f482ad862822243543b74deeb12
-MD5 7d51c5e5e0f8947d6fc6da391949bad5 openssh-4.4_p1-r1.ebuild 5380
-RMD160 01dd694cc8e688c7b4158291284d5a64d17b0da1 openssh-4.4_p1-r1.ebuild 5380
-SHA256 fe4209469378200c976aa6fabbdfd570bd539f482ad862822243543b74deeb12 openssh-4.4_p1-r1.ebuild 5380
-EBUILD openssh-4.4_p1-r3.ebuild 5437 RMD160 ec5a9cae114a1b4122d3187e683319d30cb2a48d SHA1 9044d07a0484777f9905e21eb321342fdaa8af16 SHA256 f865eea11e7d0137c4cd6844667fc8bf85e6ad52f753bc26c4bea123a51b2188
-MD5 6cc3fa9c8a17b3e6abaa140fe3fb37bd openssh-4.4_p1-r3.ebuild 5437
-RMD160 ec5a9cae114a1b4122d3187e683319d30cb2a48d openssh-4.4_p1-r3.ebuild 5437
-SHA256 f865eea11e7d0137c4cd6844667fc8bf85e6ad52f753bc26c4bea123a51b2188 openssh-4.4_p1-r3.ebuild 5437
-MISC ChangeLog 33293 RMD160 26c7b3ddf351c86214eb4015a5ea8ff2386a3f59 SHA1 945bd31dab5832670a044867416170dd1796b7fa SHA256 f85bdfc6a720166814b9016c2ddca15bf88f11ad5509ebc9cc74649fb916df5f
-MD5 404b27545acaabaeeea203b0b367441f ChangeLog 33293
-RMD160 26c7b3ddf351c86214eb4015a5ea8ff2386a3f59 ChangeLog 33293
-SHA256 f85bdfc6a720166814b9016c2ddca15bf88f11ad5509ebc9cc74649fb916df5f ChangeLog 33293
+EBUILD openssh-4.4_p1-r4.ebuild 5424 RMD160 c08e95f41da66ae120f7f191c2bc78df06f490cd SHA1 cbea2cc3e2c707348d6f15a856378b360dd0ffd2 SHA256 a79bb3bc3ff828b09524bb6186db32d5e5e98b3d1a63ae94a9970b526d13cc12
+MD5 68b72599a24d1f3828ac696340b40cff openssh-4.4_p1-r4.ebuild 5424
+RMD160 c08e95f41da66ae120f7f191c2bc78df06f490cd openssh-4.4_p1-r4.ebuild 5424
+SHA256 a79bb3bc3ff828b09524bb6186db32d5e5e98b3d1a63ae94a9970b526d13cc12 openssh-4.4_p1-r4.ebuild 5424
+MISC ChangeLog 33661 RMD160 503da27fcf47e23bd6df5f2f4adfdde79a26128c SHA1 9c5aef9ebdfe5891dee36962bc5b4b7ef135138d SHA256 fb82a558b2088caaf61a27e53fd1f6b78d7cbaa16bc9844176e31545bc20771d
+MD5 b35bb23f2d94a603e4f569ed39f3b6c0 ChangeLog 33661
+RMD160 503da27fcf47e23bd6df5f2f4adfdde79a26128c ChangeLog 33661
+SHA256 fb82a558b2088caaf61a27e53fd1f6b78d7cbaa16bc9844176e31545bc20771d ChangeLog 33661
 MISC metadata.xml 1287 RMD160 9be6778c10712b2613792647256f309898f52828 SHA1 38d05973334ed37cb9ee3778df3cf3b1369b6b81 SHA256 fbd731005f40dec6baf09aae0ba15a994e1ae448f4aa70ecd078db4b1a2feda3
 MD5 d536c311ded25994241e9708f293c9f7 metadata.xml 1287
 RMD160 9be6778c10712b2613792647256f309898f52828 metadata.xml 1287
 SHA256 fbd731005f40dec6baf09aae0ba15a994e1ae448f4aa70ecd078db4b1a2feda3 metadata.xml 1287
-size 509 files/digest-openssh-4.4_p1-r1 509
-RMD160 eb5e4f22b5987fab29590f179cf23504f02bbcaa files/digest-openssh-4.4_p1-r1 509
-SHA256 b20c299ea3e4f089febf33d46cda8bfdd68154e2bf7753d06f13248528b71ce2 files/digest-openssh-4.4_p1-r1 509
-MD5 45cc7f42e6e47ee8b783224457606e08 files/digest-openssh-4.4_p1-r1 509
-size 786 files/digest-openssh-4.4_p1-r3 786
-RMD160 31bb12f98ecaa1bf1776f18a9d717d3c734facaf files/digest-openssh-4.4_p1-r3 786
-SHA256 105c7992377303ee3756b8f427d2a4a3569ffe06df654476365d9da65472307a files/digest-openssh-4.4_p1-r3 786
-MD5 c78afce20badb68af99229c6f07ad3c4 files/digest-openssh-4.4_p1-r3 786
+MD5 dfcb472e537d3fcb4a790e6b647de3a4 files/digest-openssh-4.4_p1-r4 1081
+RMD160 e8edb2a706a805fde3a17f52f85dd69243dbe65e files/digest-openssh-4.4_p1-r4 1081
+SHA256 278eef636448a10365ebbf07769be6801b8569738fe03748fb13731c0dc28f22 files/digest-openssh-4.4_p1-r4 1081
