@@ -1,6 +1,0 @@
-MD5 793a709a8de695c22f523024d7e9bf07 openssh-4.4p1.tar.gz 1044334
-RMD160 13eb79a54e95037fff1902b659319df1c5f79bbc openssh-4.4p1.tar.gz 1044334
-SHA256 0252474af4009129cde6a2df2893fb1ac24316436758796f6adc043ac73b35ac openssh-4.4p1.tar.gz 1044334
-MD5 4db76f98b1ecbcff2bda11ff8050ad71 openssh-lpk-4.4p1-0.3.7.patch 61187
-RMD160 90b0bbe07a3617f6eecb9f77c1a38c5f4dd4dcaf openssh-lpk-4.4p1-0.3.7.patch 61187
-SHA256 c74aa642b4b2eeceb0c3f554752d172f8d5a7cd30f2aae517e93ef3bf1bd24e7 openssh-lpk-4.4p1-0.3.7.patch 61187
